--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,16 @@
 #build
 *.o
 ff
+
 lex-fct_pddl.c
+lex-fct_pddl.h
+
 lex-ops_pddl.c
-lex-fct_pddl.tab.h
-lex-ops_pddl.tab.h
-scan-fct_pddl.tab.c
-scan-ops_pddl.tab.c
-/scan-ops_pddl.tab.h
-/scan-fct_pddl.tab.h
+lex-ops_pddl.h
+
+scan-fct_pddl.c
+scan-fct_pddl.h
+
+scan-ops_pddl.c
+scan-ops_pddl.h
+
